feat(bff): 自定义提示词优化
