# internal/bff-service/server/http/handler/router/v1/tool.go
@@ -58,4 +58,6 @@ func registerTool(apiV1 *gin.RouterGroup) {
 	mid.Sub("tool").Reg(apiV1, "/prompt/custom/list", http.MethodGet, v1.GetCustomPromptList, "获取自定义Prompt列表")
 	mid.Sub("tool").Reg(apiV1, "/prompt/custom/copy", http.MethodPost, v1.CopyCustomPrompt, "复制自定义Prompt")
 	mid.Sub("tool").Reg(apiV1, "/prompt/template", http.MethodPost, v1.CreatePromptByTemplate, "复制提示词模板")
+	mid.Sub("tool").Reg(apiV1, "/prompt/optimize", http.MethodPost, v1.GetPromptOptimize, "提示词优化")
+
 }
